--- a/scss/index.html
+++ b/scss/index.html
@@ -17,5 +17,16 @@
             <li><a href="">Hier gehts zu einer weiteren Seite</a></li>
         </ul>
     </nav>
+    <br>
+    <br>
+    <br>
+    <div>
+            <h3>SCSS Extend Beispiel</h3>
+        <!-- <div class="message">Dies ist eine allgemeine Nachricht.</div> -->
+        <div class="success">Dies ist eine Erfolgsmeldung.</div>
+        <div class="error">Dies ist eine Fehlermeldung.</div>
+        <div class="warning">Dies ist eine Warnmeldung.</div>
+    </div>
+    <br>
 </body>
 </html>
