--- a/08_beispiel_pres/index.html
+++ b/08_beispiel_pres/index.html
@@ -3,15 +3,18 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>D3.js - Beispiel</title>
 </head>
 <body>
-    <h2>Umfrage:</h2>
+    <h2>Diagramm-Beispiel:</h2>
+    
+
     <div id="pizza-chart"></div>
-    <!-- Include the D3.js library -->
+
+    <!-- D3.js Bibliothek einbinden  -->
     <script src="https://d3js.org/d3.v7.min.js"></script>
 
-    <!-- Include your custom script file -->
+    <!-- Eigene js-Datei hinzufügen -->
     <script src="script.js"></script>
 </body>
 </html>
